--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.component-children {
+  padding: 10px;
+  border: 1px solid red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
